Add Fabric API workaround to get the mineshafts to spawn. Several tweaks and fixes. * Remove all liquid/ocean biome piece checks. * All pieces now try to close themselves off to water to prevent floating water. * Ore deposits no longer replace liquid with cobble/ore.